Fix alignment of elements

--- a/styles/body.css
+++ b/styles/body.css
@@ -22,9 +22,10 @@ header {
 
 main {
   width: 100%;
-  height: 100%;
+  flex-grow: 1;
   align-self: center;
   display: flex;
+  justify-content: center;
 }
 
 .tick text {
