--- a/styles/hero.css
+++ b/styles/hero.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 20vh;
 }
 
 .hero > h2 {
